# haskell-flowdock-grep

./: .travis.meta.yml  .travis.yml  README.md  flowdock-grep.cabal  package.yaml  stack-lts-2.yaml  stack-lts-3.yaml  stack-lts-5.yaml  stack-lts-6.yaml  stack.yaml
src/: Main.hs
