name:           flowdock-grep
version:        0
synopsis:       Grep Flowdock logs
description:    Check the readme below
category:       Web, Productivity
homepage:       https://github.com/futurice/haskell-flowdock-grep#readme
bug-reports:    https://github.com/futurice/haskell-flowdock-grep/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/futurice/haskell-flowdock-grep

executable flowdock-grep
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -Wall -threaded
  build-depends:
      base >= 4.7 && <4.15
    , base-compat
    , flowdock-rest >=0.1.0.0
    , aeson-compat
    , ansi-terminal
    , bifunctors
    , binary
    , binary-instances
    , binary-orphans >=0.1.3.0
    , binary-tagged >=0.1.4.0 && <0.4
    , bytestring
    , deepseq
    , directory
    , exceptions
    , hashable >= 1.2
    , http-client
    , http-client-tls
    , lens
    , old-locale
    , optparse-applicative >= 0.13
    , path
    , semigroups
    , tagged
    , text
    , time
    , time-locale-compat
    , unordered-containers
    , vector
  default-language: Haskell2010
